--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,17 @@ atomicwrites==1.4.0
 attrs==21.2.0
 colorama==0.4.4
 iniconfig==1.1.1
+jsonpickle==2.0.0
+mysql-connector-python==8.0.26
 packaging==21.0
 pluggy==0.13.1
+pony==0.7.14
+protobuf==3.17.3
 py==1.10.0
+PyMySQL==1.0.2
 pyparsing==2.4.7
 pytest==6.2.4
 selenium==3.141.0
+six==1.16.0
 toml==0.10.2
 urllib3==1.26.6
